# CV_Labs

./: README.md
Lab1/: 01-Install-OpenCV.ipynb  Lab1.ipynb
hello_world/: CMakeLists.txt  main.cpp
hello_world/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  graphics  hello
